<resources>
    <string name="about_activity">About AquaMail</string>
    <string name="about_text_2">An email app for Android.</string>
    <string name="access_account_last_check">Refreshed at %1$s</string>
    <string name="access_account_last_check_error">Refreshed at %1$s, errors since then</string>
    <string name="access_account_with_name">Account: %1$s</string>
    <string name="access_folder_navigate_up">Up to parent</string>
    <string name="access_folder_remote_name">Remote folder name: %1$s</string>
    <string name="access_folder_settings">Folder settings</string>
    <string name="access_folder_with_name">Folder: %1$s</string>
    <string name="access_message_counts_no_unread">%1$s total messages</string>
    <string name="access_message_counts_unread_has_new">some new, %1$d unread, %2$s total messages</string>
    <string name="access_message_counts_unread_no_new">%1$d unread, %2$s total messages</string>
    <string name="access_message_display_from_contact">Sender contact button</string>
    <string name="access_message_display_full_screen">Full screen toggle</string>
    <string name="access_message_list_action_mode">Action mode: %1$s</string>
    <string name="access_message_list_attachments">With attachments: %1$s</string>
    <string name="access_message_list_proxy_selector">Selector</string>
    <string name="access_message_list_proxy_star">Star indicator</string>
    <string name="access_message_list_selected">Selected</string>
    <string name="access_message_list_star_cleared">Star cleared</string>
    <string name="access_message_list_star_set">Star set</string>
    <string name="access_message_list_starred">Starred</string>
    <string name="access_message_list_unread">Unread</string>
    <string name="access_new_pick">Pick contact: %1$s</string>
    <string name="access_new_remove_field">Remove entry field</string>
    <string name="access_refresh_account">Refresh account</string>
    <string name="account_alias_list_add">Add an identity</string>
    <string name="account_alias_list_title">Identities</string>
    <string name="account_alias_list_title_name">Identities for %1$s</string>
    <string name="account_backup_restore_activity">Account backup and restore</string>
    <string name="account_backup_restore_choose_folder">Folder</string>
    <string name="account_backup_restore_dlg_prompt_1">"Enter password
(6 or more characters):"</string>
    <string name="account_list_menu_aliases">Identities</string>
    <string name="account_list_menu_delete">Delete the account</string>
    <string name="account_list_menu_diag_message_dates">Diag: message dates</string>
    <string name="account_list_menu_options">Options and folders</string>
    <string name="account_list_menu_preferences">Settings</string>
    <string name="account_list_menu_rename">Rename the account</string>
    <string name="account_list_menu_settings">Account setup</string>
    <string name="account_list_menu_sort_move_down">Move down</string>
    <string name="account_list_menu_sort_move_up">Move up</string>
    <string name="account_list_menu_sort_reset">Sort by name</string>
    <string name="account_list_menu_sort_title">Change order</string>
    <string name="account_list_menu_special">Special settings</string>
    <string name="account_options_account_color">Assign color</string>
    <string name="font_size_larger">Larger font</string>
    <string name="font_size_smaller">Smaller font</string>
    <string name="message_display_action_delete">Delete now</string>
    <string name="message_display_action_forward">Forward</string>
    <string name="message_display_action_forward_anon">Forward (anonymous)</string>
    <string name="message_display_action_hide">Hide without deleting</string>
    <string name="message_display_action_move_to_deleted">Move to Deleted</string>
    <string name="message_display_action_reply">Reply</string>
    <string name="message_display_action_reply_all">Reply to all</string>
    <string name="message_display_action_reply_as_new">Reply (as new)</string>
    <string name="message_display_action_reply_clean">Reply (clean)</string>
    <string name="message_display_menu_copy">Copy/Send/Share/Print</string>
    <string name="message_display_menu_copy_headers">Copy message headers</string>
    <string name="message_display_menu_copy_text">Copy message text</string>
    <string name="message_display_menu_full_screen_enable">Enable full screen</string>
    <string name="message_display_menu_mark_read">Mark read</string>
    <string name="message_display_menu_mark_unread">Mark unread</string>
    <string name="message_display_menu_mobile_view_enable">Enable mobile view</string>
    <string name="message_display_menu_mono_font_enable">Enable mono font</string>
    <string name="message_display_menu_move">Move to folder</string>
    <string name="message_display_menu_navigate_next">Next</string>
    <string name="message_display_menu_navigate_prev">Previous</string>
    <string name="message_display_menu_reload">Diag: Reload</string>
    <string name="message_display_menu_select_text">Select message text</string>
    <string name="message_display_menu_send_share">Send/Share/Print message text</string>
    <string name="message_display_menu_send_to_calendar">Send to Calendar</string>
    <string name="message_display_menu_view">View</string>
    <string name="message_display_menu_white">Enable white background</string>
    <string name="message_display_page_attachments">Attachments</string>
    <string name="message_display_page_text">Message</string>
    <string name="message_list_menu_check_all">Select list</string>
    <string name="message_list_menu_compose">New message</string>
    <string name="message_list_menu_mark_all_read">Mark all read</string>
    <string name="message_list_menu_purge_deleted">Purge deleted</string>
    <string name="message_list_menu_refresh">Refresh</string>
    <string name="message_list_menu_restore_hidden">Show hidden</string>
    <string name="message_list_menu_sort">Sort</string>
    <string name="message_list_menu_sort_attachments">By attachments</string>
    <string name="message_list_menu_sort_datetime">By date/time</string>
    <string name="message_list_menu_sort_datetime_reverse">By date/time (reverse)</string>
    <string name="message_list_menu_sort_save_default">Save as default</string>
    <string name="message_list_menu_sort_sender">By sender</string>
    <string name="message_list_menu_sort_starred_first">Starred first</string>
    <string name="message_list_menu_sort_subject">By subject</string>
    <string name="message_list_menu_sort_unread_first">Unread first</string>
    <string name="message_list_op_headers">Show headers</string>
    <string name="message_list_showing_all">Offline list</string>
    <string name="new_message_attach_debug_logs">Diag: attach logs</string>
    <string name="new_message_menu_add_attachment">Attach</string>
    <string name="new_message_menu_add_attachment_camera">Take and attach a photo</string>
    <string name="new_message_menu_add_attachment_image">Attach image</string>
    <string name="new_message_menu_add_attachment_image_cropped">Attach cropped image</string>
    <string name="new_message_menu_add_attachment_video">Attach video</string>
    <string name="new_message_menu_add_cc_bcc">Show/Add CC/BCC</string>
    <string name="new_message_menu_append_signature">Append signature</string>
    <string name="new_message_menu_delete">Delete</string>
    <string name="new_message_menu_edit_as_new">Edit as new</string>
    <string name="new_message_menu_flipdog_spell_checker">Spell Checker (Flipdog Solutions, LLC)</string>
    <string name="new_message_menu_format_plain">Switch to plain text</string>
    <string name="new_message_menu_format_rich">Switch to rich text</string>
    <string name="new_message_menu_insert_greeting">Insert greeting</string>
    <string name="new_message_menu_pick_contacts_internal">Built-in contact picker</string>
    <string name="new_message_menu_pick_contacts_system">System contact picker</string>
    <string name="new_message_menu_priority">Set high priority</string>
    <string name="new_message_menu_reply_to">Set reply address</string>
    <string name="new_message_menu_report">Request read receipt</string>
    <string name="new_message_menu_save">Save</string>
    <string name="new_message_menu_send">Send</string>
    <string name="prefs_category_notify">Message notifications</string>
    <string name="prefs_category_send_notify">Send notifications</string>
    <string name="prefs_category_special_notify">@string/prefs_category_special</string>
    <string name="prefs_category_special_notify_summary">Special message notifications for this account</string>
    <string name="prefs_category_special_storage">@string/prefs_category_special</string>
    <string name="prefs_category_special_storage_summary">Special attachments folder for this account</string>
    <string name="prefs_category_special_sync">@string/prefs_category_special</string>
    <string name="prefs_category_special_sync_summary">Special sync settings for this account</string>
    <string name="prefs_category_storage">Data storage</string>
    <string name="prefs_category_sync">Mail, receiving</string>
    <string name="prefs_notify_led">LED notifications</string>
    <string name="prefs_notify_led_color">LED color</string>
    <string name="prefs_notify_led_summary">Use the LED for notifications</string>
    <string name="prefs_notify_numbers">Show counts on icons</string>
    <string name="prefs_notify_numbers_summary">Show message counts on the notification icons</string>
    <string name="prefs_notify_on">Enable notifications</string>
    <string name="prefs_notify_on_summary">Enable message notifications</string>
    <string name="prefs_notify_only_changes">Only when there are changes</string>
    <string name="prefs_notify_only_changes_summary">Notify only when there are changes in message state(s)</string>
    <string name="prefs_notify_only_new">Only when new messages</string>
    <string name="prefs_notify_only_new_summary">Notify only when there are new messages</string>
    <string name="prefs_notify_privacy">Protect privacy</string>
    <string name="prefs_notify_privacy_summary">Suppress subject/sender info</string>
    <string name="prefs_notify_screen_on">Turn screen on</string>
    <string name="prefs_notify_screen_on_summary">Turn the screen on when notifying</string>
    <string name="prefs_notify_sound">Sound</string>
    <string name="prefs_notify_sound_once">Play sound only once</string>
    <string name="prefs_notify_sound_once_summary">Only when there is no unread message notification yet</string>
    <string name="prefs_notify_vibration">Vibration</string>
    <string name="prefs_notify_vibration_observe_mode">Only in \"vibration\" mode</string>
    <string name="prefs_notify_vibration_observe_mode_summary">Vibrate only when the device is in \"vibration\" mode</string>
    <string name="prefs_notify_vibration_pattern">Vibration pattern</string>
    <string name="prefs_notify_vibration_pattern_default">Default</string>
    <string name="prefs_notify_vibration_summary">Use vibration</string>
    <string name="prefs_send_notify">Enable notifications</string>
    <string name="prefs_send_notify_summary">Enable send notifications</string>
    <string name="prefs_sync_frequency">Mail check interval</string>
    <string name="prefs_sync_frequency_custom">Custom check interval</string>
    <string name="prefs_sync_frequency_custom_hours_minutes">%1$d hours, %2$d minutes</string>
    <string name="prefs_sync_frequency_custom_minutes">%1$d minutes</string>
    <string name="prefs_sync_frequency_custom_none">Not specified</string>
    <string name="prefs_ui_storage_root">Folder for attachments</string>
    <string name="quick_response_insert">Insert quick response</string>
    <string name="search_menu_title">Search</string>
</resources>