<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/bb_ic_menu_send" android:id="@id/new_message_menu_send" android:title="@string/new_message_menu_send" android:showAsAction="always|withText" />
    <item android:icon="@drawable/bb_ic_menu_save_selector" android:id="@id/new_message_menu_save" android:title="@string/new_message_menu_save" android:showAsAction="always|withText" />
    <item android:icon="@drawable/bb_ic_menu_attachment" android:id="@id/new_message_menu_add_attachment" android:title="@string/new_message_menu_add_attachment" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/bb_ic_menu_crop" android:id="@id/new_message_menu_add_attachment_image_cropped" android:visible="false" android:title="@string/new_message_menu_add_attachment_image_cropped" />
    <item android:icon="@drawable/bb_ic_menu_attachment" android:id="@id/new_message_menu_add_attachment_image" android:visible="false" android:title="@string/new_message_menu_add_attachment_image" />
    <item android:icon="@drawable/bb_ic_menu_attachment" android:id="@id/new_message_menu_add_attachment_video" android:visible="false" android:title="@string/new_message_menu_add_attachment_video" />
    <item android:icon="@drawable/android_ic_menu_camera" android:id="@id/new_message_menu_add_attachment_camera" android:visible="false" android:title="@string/new_message_menu_add_attachment_camera" />
    <item android:icon="@drawable/bb_ic_menu_view" android:title="@string/message_display_menu_view">
        <menu>
            <item android:id="@id/message_display_menu_white" android:title="@string/message_display_menu_white" />
            <item android:id="@id/font_size_larger" android:title="@string/font_size_larger" />
            <item android:id="@id/font_size_smaller" android:title="@string/font_size_smaller" />
        </menu>
    </item>
    <item android:icon="@drawable/bb_ic_menu_cc" android:id="@id/new_message_menu_add_cc_bcc" android:title="@string/new_message_menu_add_cc_bcc" android:showAsAction="ifRoom" />
    <item android:icon="?ic_menu_text_format" android:id="@id/new_message_menu_format_rich" android:visible="false" android:title="@string/new_message_menu_format_rich" />
    <item android:icon="?ic_menu_text_format" android:id="@id/new_message_menu_format_plain" android:visible="false" android:title="@string/new_message_menu_format_plain" />
    <item android:icon="@drawable/bb_ic_menu_mark" android:id="@id/new_message_menu_report" android:title="@string/new_message_menu_report" />
    <item android:icon="@drawable/bb_ic_menu_report_image" android:id="@id/new_message_menu_priority" android:title="@string/new_message_menu_priority" />
    <item android:icon="@drawable/bb_ic_menu_edit" android:id="@id/new_message_menu_edit_as_new" android:title="@string/new_message_menu_edit_as_new" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/bb_ic_menu_revert" android:id="@id/new_message_menu_reply_to" android:title="@string/new_message_menu_reply_to" />
    <item android:icon="@drawable/bb_ic_menu_contact" android:id="@id/new_message_menu_pick_contacts_internal" android:visible="false" android:title="@string/new_message_menu_pick_contacts_internal" />
    <item android:icon="@drawable/bb_ic_menu_contact" android:id="@id/new_message_menu_pick_contacts_system" android:visible="false" android:title="@string/new_message_menu_pick_contacts_system" />
    <item android:icon="@drawable/bb_ic_menu_add" android:id="@id/new_message_menu_insert_greeting" android:title="@string/new_message_menu_insert_greeting" />
    <item android:icon="@drawable/bb_ic_menu_add" android:id="@id/new_message_menu_insert_quick_response" android:title="@string/quick_response_insert" />
    <item android:icon="@drawable/bb_ic_menu_upload" android:id="@id/new_message_menu_flipdog_spell_checker" android:title="@string/new_message_menu_flipdog_spell_checker" />
    <item android:icon="@drawable/bb_ic_menu_add" android:id="@id/new_message_menu_append_signature" android:title="@string/new_message_menu_append_signature" />
    <item android:icon="@drawable/bb_ic_menu_delete" android:id="@id/new_message_menu_delete" android:title="@string/new_message_menu_delete" android:showAsAction="ifRoom|withText" />
    <item android:icon="?ic_message_reply_all" android:id="@id/new_message_menu_reply_all" android:title="@string/message_display_action_reply_all" android:showAsAction="ifRoom|withText" />
    <item android:icon="?ic_message_forward" android:id="@id/new_message_menu_forward" android:title="@string/message_display_action_forward" android:showAsAction="ifRoom|withText" />
    <group android:id="@id/new_message_menu_navigate">
        <item android:icon="?ic_prev_arrow" android:id="@id/new_message_menu_navigate_prev" android:visible="false" android:title="@string/message_display_menu_navigate_prev" android:showAsAction="ifRoom" />
        <item android:icon="?ic_next_arrow" android:id="@id/new_message_menu_navigate_next" android:visible="false" android:title="@string/message_display_menu_navigate_next" android:showAsAction="ifRoom" />
    </group>
    <item android:icon="@drawable/bb_ic_menu_attachment" android:id="@id/new_message_attach_debug_logs" android:visible="false" android:title="@string/new_message_attach_debug_logs" />
</menu>