<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/bb_ic_menu_fullscreen_new" android:id="@id/message_display_menu_fullscreen_button" android:title="@string/message_display_menu_full_screen_enable" android:showAsAction="always" />
    <item android:icon="@drawable/bb_ic_menu_close_clear_cancel" android:id="@id/message_display_menu_delete_now" android:title="@string/message_display_action_delete" android:alphabeticShortcut="x" android:showAsAction="always|withText" />
    <item android:icon="@drawable/bb_ic_menu_delete" android:id="@id/message_display_menu_move_to_deleted" android:title="@string/message_display_action_move_to_deleted" android:alphabeticShortcut="d" android:showAsAction="always|withText" />
    <item android:icon="@drawable/icon_hide_from_view" android:id="@id/message_display_menu_hide_from_view" android:title="@string/message_display_action_hide" android:alphabeticShortcut="h" android:showAsAction="always|withText" />
    <item android:icon="?ic_message_reply" android:id="@id/message_display_menu_reply" android:title="@string/message_display_action_reply" android:alphabeticShortcut="r" android:showAsAction="always" />
    <item android:icon="?ic_message_reply_all" android:id="@id/message_display_menu_reply_all" android:title="@string/message_display_action_reply_all" android:alphabeticShortcut="a" android:showAsAction="always" />
    <item android:icon="?ic_message_forward" android:id="@id/message_display_menu_forward" android:title="@string/message_display_action_forward" android:alphabeticShortcut="f" android:showAsAction="always" />
    <item android:icon="@drawable/bb_ic_menu_edit" android:id="@id/message_display_menu_reply_as_new" android:title="@string/message_display_action_reply_as_new" />
    <item android:icon="@drawable/bb_ic_menu_copy" android:id="@id/message_display_menu_reply_clean" android:title="@string/message_display_action_reply_clean" />
    <item android:icon="?ic_message_forward" android:id="@id/message_display_menu_forward_anon" android:title="@string/message_display_action_forward_anon" />
    <item android:icon="@drawable/bb_ic_menu_upload" android:title="@string/message_display_menu_copy">
        <menu>
            <item android:id="@id/message_display_menu_select_text" android:title="@string/message_display_menu_select_text" />
            <item android:id="@id/message_display_menu_copy_text" android:title="@string/message_display_menu_copy_text" />
            <item android:id="@id/message_display_menu_copy_headers" android:title="@string/message_display_menu_copy_headers" />
            <item android:id="@id/message_display_menu_send_share" android:title="@string/message_display_menu_send_share" />
            <item android:id="@id/message_display_menu_send_to_calendar" android:title="@string/message_display_menu_send_to_calendar" />
        </menu>
    </item>
    <item android:icon="@drawable/bb_ic_menu_view" android:title="@string/message_display_menu_view">
        <menu>
            <item android:id="@id/message_display_menu_mobile_view" android:title="@string/message_display_menu_mobile_view_enable" />
            <item android:id="@id/message_display_menu_mono_font" android:title="@string/message_display_menu_mono_font_enable" />
            <item android:id="@id/message_display_menu_full_screen" android:title="@string/message_display_menu_full_screen_enable" />
            <item android:id="@id/message_display_menu_white" android:title="@string/message_display_menu_white" />
            <item android:id="@id/message_display_menu_headers" android:title="@string/message_list_op_headers" />
            <item android:id="@id/font_size_larger" android:title="@string/font_size_larger" />
            <item android:id="@id/font_size_smaller" android:title="@string/font_size_smaller" />
        </menu>
    </item>
    <item android:id="@id/message_display_page_text" android:visible="false" android:title="@string/message_display_page_text" />
    <item android:id="@id/message_display_page_attachments" android:visible="false" android:title="@string/message_display_page_attachments" />
    <item android:icon="@drawable/bb_ic_menu_archive" android:id="@id/message_display_menu_move" android:title="@string/message_display_menu_move" />
    <item android:icon="?ic_menu_movespam" android:id="@id/message_display_menu_spam" android:visible="false" android:title="@string/message_display_menu_spam" />
    <item android:icon="?ic_mark_unread" android:id="@id/message_display_menu_mark_unread" android:title="@string/message_display_menu_mark_unread" />
    <item android:icon="?ic_mark_read" android:id="@id/message_display_menu_mark_read" android:title="@string/message_display_menu_mark_read" />
    <item android:icon="@drawable/bb_ic_menu_close_clear_cancel" android:id="@id/message_display_menu_delete_now_second" android:visible="false" android:title="@string/message_display_action_delete" android:alphabeticShortcut="x" />
    <item android:icon="@drawable/bb_ic_menu_refresh" android:id="@id/message_display_menu_reload" android:title="@string/message_display_menu_reload" />
    <group android:id="@id/message_display_menu_navigate">
        <item android:icon="?ic_prev_arrow" android:id="@id/message_display_menu_navigate_prev" android:title="@string/message_display_menu_navigate_prev" android:showAsAction="ifRoom" />
        <item android:icon="?ic_next_arrow" android:id="@id/message_display_menu_navigate_next" android:title="@string/message_display_menu_navigate_next" android:showAsAction="ifRoom" />
    </group>
</menu>